# numenor-monitor

./: .gitignore  README.md  pyproject.toml
numenor_monitor/: admin.py  apps.py  middlewares.py  models.py  tests.py  urls.py
numenor_monitor/migrations/: 0001_initial.py  0002_rename_ip_address_request_remote_addr_and_more.py  0003_alter_request_remote_addr.py
project/: settings.py  test_views.py  urls.py
