[project]
name = "numenor_monitor"
version = "0.0.1"
description = "A Django middleware application for monitoring and logging HTTP requests with asynchronous processing"
authors = [
    {name = "Cristhian Gonzales Castillo", email = "cristhian@gcca.dev"},
]
dependencies = ["Django>=6.0"]
requires-python = ">=3.13"
readme = "README.md"
license = "AGPL-3.0-or-later"

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["numenor_monitor*"]

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "coverage>=7.13.1",
    "django-stubs>=5.2.8",
]
